Revision history for Perl extension Net::SSH2.

0.59_04
        - Add scat.pl sample script
        - Several documentation improvements.

0.59_03  Apr 12, 2016
        - Fix Channel "read" method that was hanging in blocking mode.
        - Add "check_remote_hostkey" method for easy remote host key
          verification (WIP)
        - Add "die_with_error" method.
        - Several documentation improvements.

0.59_02  Apr 12, 2016
        - Fix "auth_list" method.
        - Fix handling of "lib" argument in Makefile.PL.
        - Compilation was broken for perls 5.8.0 .. 5.8.3.
        - Several documentation improvements.

0.59_01  Apr 11, 2016
        *** WARNING: this release includes lots of changes, some
            visible, most internal. Regressions are expected. Also,
            it introduces some minor backward incompatible changes -
            but in those cases, the old behavior was broken or insane
            anyway.

        - libssh2 version 1.7.0 is now recommended. The module would
          still compile against older versions, but not all its
          features will be available.
        - Makefile.PL has been refactored and improved. Now it is
          better able to find the library libssh2 and compile code
          using it.
        - Lots of XS code refactoring has been performed in order to
          simplify the module internals. Specifically, now typemaps
          are used extensively to convert between C and Perl
          types. Also, some complex non-performance-critical functions
          have been moved to the Perl side or broken in a high level
          Perl wrapper and a low level simpler C wrapper.
        - KnownHost methods now return undef on error instead of
          die'ing. Note that this submodule is still marked as
          experimental.
        - Die when data containing wide characters is passed
          (i.e. outside the latin1 range). In previous versions,