@@ -3,6 +3,7 @@ Revision history for Perl extension Net::SSH2.
 0.59_04
         - Add scat.pl sample script
         - Several documentation improvements.
+        - Remove File::Slurp dependency in test script.
 
 0.59_03  Apr 12, 2016
         - Fix Channel "read" method that was hanging in blocking mode.
